# src/main/java/com/randomhouse/bookstore/controllers/impl/UserController.java
@@ -1,15 +1,16 @@
 package com.randomhouse.bookstore.controllers.impl;
 
 import com.randomhouse.bookstore.controllers.api.CustomerApi;
+import com.randomhouse.bookstore.controllers.validators.UserValidator;
 import com.randomhouse.bookstore.entities.UserEntity;
 import com.randomhouse.bookstore.services.UserService;
-import com.randomhouse.bookstorecontrollers.model.User;
-import io.swagger.annotations.ApiParam;
+import com.randomhouse.bookstorecontrollers.model.UserRequest;
 import javax.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.WebDataBinder;
+import org.springframework.web.bind.annotation.InitBinder;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
@@ -17,10 +18,17 @@ import org.springframework.web.bind.annotation.RestController;
 public class UserController implements CustomerApi {
 
     private final UserService userService;
+    private final UserValidator userValidator;
+
+    @InitBinder("userRequest")
+    protected void userEntryInitBinder(WebDataBinder binder) {
+        binder.setValidator(userValidator);
+    }
 
     @Override
-    public ResponseEntity<Void> createCustomer(@Valid @RequestBody User body
+    public ResponseEntity<Void> createCustomer(@Valid UserRequest body
     ) {
+
         UserEntity userEntity = UserEntity.builder().firstName(body.getFirstName())
                 .lastName(body.getLastName()).email(body.getEmail())
                 .userType(body.getUserType().toString()).password(body.getPassword()).build();
@@ -28,5 +36,6 @@ public class UserController implements CustomerApi {
 
         return new ResponseEntity<>(HttpStatus.OK);
     }
+
 
 }
